# open-compliance-agent

./: .env.example  .gitignore  Dockerfile  PROJECT_COMPLETION_REPORT.md  README.md  app.py  docker-compose.yml  pyproject.toml
compliance_rag/: config.py  ingestion.py  metadata_db.py  run_evolution_loop.py  test_evaluation.py  test_run.py  validate_indexing.py
compliance_rag/agents/: evolution.py  specialists.py
compliance_rag/core/: defaults.py  gene_pool.py  sop.py  state.py
compliance_rag/evaluation/: judge.py  models.py  programmatic.py
compliance_rag/graph/: workflow.py
compliance_rag/tools/: retrieval.py
compliance_rag/utils/: json_parser.py  logger.py
data/: ai_usage_policy.md  data_classification_standard.md  remote_work_policy.md  sop_gene_pool.json
docs/: architecture_overview.md  file_manifest.md  inner_network_walkthrough.md
